fix: header stack level fixed to z-index 2

--- a/src/components/Cabecalho/Cabecalho.module.css
+++ b/src/components/Cabecalho/Cabecalho.module.css
@@ -12,7 +12,7 @@
 
   padding: 1rem 23px;
 
-  
+  z-index: 2;
 }
 
 .rightHeader {
@@ -38,6 +38,7 @@
 
 .list__menu {
   color: white;
+  z-index: 2;
 }
 
 .list__menu li {
